# dw-uphi-simulator

./: .gitignore  CMakeLists.txt  README.md  pyrightconfig.json  sync_cluster.sh
cuda_src/: cu_h_sweep.cu  gpu_timer.cu  main.cu  precision_tests.cu  test_fft.cu
domain_wall_simulator/: Doxyfile
domain_wall_simulator/include/: DomainWallSimulator.h  cpu_domain_wall.h  cpu_pde_pseudospectral_solver.h  domain_wall_experiments.h  gpu_domain_wall.cuh  gpu_pde_pseudospectral_solver.cuh
domain_wall_simulator/src/: SimulatorCPU.cpp  SimulatorFactory.cpp  SimulatorGPU.cu
include/: ODPendulum.h  ODPendulum_0.1.h  PhiSweeper.h  filesaver.h  filesaver_0.1.h  light.h  pendulumAnalyser.h  pendulumSweeper.h
programs/: complete_h_sweep.cpp  h_sweep.cpp  movie.cpp  scaling.cpp  spectra_analysis.cpp  structure_analysis.cpp
python/: avgvel3d.py  avgvel3d_hOMh0.py  fft.py  fft1d.py  plot.py  plot_interactive.py  plot_vf.py  ps_power_spectrum.py  pseudospectral_h_vs_v.py  pseudospectral_plot.py  shapiro.py  shapiro2d.py  shapiro2d_2.py  wall_sync.py  x.py  y.py  z.py  z2.py  z3.py
python/stubs/: pyODPend.pyi
src/: ODPendulum.cpp  ODPendulum_0.1.cpp  PhiSweeper.cpp  avgvel3d.cpp  cpu_timer.cpp  fft_3drange.cpp  fft_range.cpp  main_fft.cpp  main_py.cpp  pendulumAnalyser.cpp  pendulumSweeper.cpp  power_spectrum.cpp  shapStep2d.cpp  spectral.cpp  wall_analysis.cpp  wall_heatmap.cpp  wall_steps.cpp
